# shapearealib

./: .gitattributes  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
shapearea/: __init__.py  figures.py  validators.py
tests/: test_geometry.py
